--- a/IndustryConnect_v2/IndustryConnect_v2/IndustryConnect_v2.csproj
+++ b/IndustryConnect_v2/IndustryConnect_v2/IndustryConnect_v2.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="130.0.6723.11600" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utilities\" />
+  </ItemGroup>
+
 </Project>
